blog/bunny-ip-sync.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: blog-bunny-ip-allowlist
  namespace: blog
spec:
  ipAllowList:
    # Fail closed until the first successful Bunny CDN edge-list sync.
    sourceRange: ["127.0.0.1/32", "::1/128"]
