blog/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: blog
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: ghost
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ghost
    spec:
      automountServiceAccountToken: false
      containers:
        - name: ghost
          image: ghost:6.67
          resources:
            requests:
              memory: 512Mi
              cpu: 256m
            limits:
              memory: 1024Mi
              cpu: 1024m
          ports:
            - containerPort: 2368
          volumeMounts:
            - name: media
              mountPath: /var/lib/ghost/content
            - name: config
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
          readinessProbe:
            httpGet:
              path: /
              port: 2368
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 2368
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
            initialDelaySeconds: 5
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
            readOnly: false
        - name: config
          configMap:
            name: ghost-conf
            items:
              - key: config.production.json
                path: config.production.json
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: blog
spec:
  ports:
    - port: 2368
  selector:
    app: ghost
