blog/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: inject-headers
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ghost-admin-fail2ban
spec:
  plugin:
    fail2ban:
      sourceCriterion:
        requestHeaderName: X-Real-IP
      rules:
        bantime: 1h
        findtime: 10m
        maxretry: 5
        enabled: true
        statuscode: "401,403"
      enableBlockLogs: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: blog
  annotations:
    internal.paulus.family/target: 10.30.0.0
spec:
  entryPoints: [web]
  routes:
    - match: Host(`ghost.tompaulus.com`)
      priority: 10
      middlewares:
        - name: inject-headers
      services:
        - name: ghost
          port: 2368
  tls:
    secretName: blog-tompaulus-com-cert
    options:
      name: no-client-cert
      namespace: blog
